re-layer docker image for more efficient build, using multi-stage build, add env for nginx root directory, adjust env in nginx confs

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,11 +7,10 @@ http{
     server{
 
         listen $NGINX_PORT;
-        index index.html;
-        root /home/build;
-        
+
         location / {
-            try_files $uri $uri/ $uri/index.html /index.html;
+            root $ROOT_DIR;
+            index index.html;
         }
     
         location ~* \.(eot|ttf|woff|woff2|svg)$ {
