--- a/env/.sample.env
+++ b/env/.sample.env
@@ -4,10 +4,11 @@ ANGULAR_VERSION=11
 
 ## NGINX CONFIGURATION
 NGINX_PORT=8080
+ROOT_DIR=/home/build
 
-## WRAPPER CONFIGURATION
-#   PROXY: set to 'true' if you have the CCDA server running.
-#      case insensitive. if set to 'true', 'nginx.ccda.conf' is used.
+## PROXY CONFIGURATION
+#   PROXY: set to 'true' if you have a proxy server running.
+#      Case insensitive. if set to 'true', 'nginx.ccda.conf' is used.
 #      If set to 'false', 'nginx.standalone.conf' is used.       
 #
 #   (PROXY_HOST, PROXY_PORT): these variables get injected into the
@@ -19,7 +20,7 @@ NGINX_PORT=8080
 #            defined in the yaml.
 PROXY=false
 PROXY_PORT=8000
-PROXY_HOST=wccda
+PROXY_HOST=proxy
 
 ## DOCKER IMAGE CONFIGURATION
 CONTAINER_NAME=nginx_angular_web
