--- a/conf/nginx.proxy.conf
+++ b/conf/nginx.proxy.conf
@@ -4,18 +4,17 @@ http{
 
     include /etc/nginx/mime.types;
 
-    upstream ccda{
-        server $CCDA_HOST:$CCDA_PORT;
+    upstream proxy{
+        server $PROXY_HOST:$PROXY_PORT;
     }
     
     server{
 
         listen $NGINX_PORT;
-        index index.html;
-        root /home/build;
-        
+
         location / {
-            try_files $uri $uri/ $uri/index.html /index.html;
+            root $ROOT_DIR;
+            index index.html;
         }
     
         location ~* \.(eot|ttf|woff|woff2|svg)$ {
@@ -23,7 +22,7 @@ http{
         }
 
         location /api {
-            proxy_pass http://ccda/api;
+            proxy_pass http://proxy/api;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
