--- a/conf/nginx.standalone.conf
+++ b/conf/nginx.standalone.conf
@@ -7,11 +7,10 @@ http{
     server{
 
         listen $NGINX_PORT;
-        index index.html;
-        root /home/build;
-        
+
         location / {
-            try_files $uri $uri/ $uri/index.html /index.html;
+            root $ROOT_DIR;
+            index index.html;
         }
     
         location ~* \.(eot|ttf|woff|woff2|svg)$ {
